[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/Dude.gd" type="Script" id=1]
[ext_resource path="res://assets/chars/player_walk.png" type="Texture" id=2]
[ext_resource path="res://assets/chars/player_fall.png" type="Texture" id=3]
[ext_resource path="res://assets/chars/player_die.png" type="Texture" id=4]
[ext_resource path="res://assets/audio/Chest.wav" type="AudioStream" id=5]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.19008
height = 5.74522

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "fall",
"speed": 10.0
} ]

[node name="Dude" type="RigidBody2D" groups=[
"dude",
]]
collision_layer = 7
collision_mask = 7
mass = 5.0
physics_material_override = SubResource( 1 )
contacts_reported = 1
contact_monitor = true
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Pin" type="PinJoint2D" parent="."]

[node name="AnimSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.515043, -1.0769 )
frames = SubResource( 9 )
animation = "walk"

[node name="DeathAnim" type="Sprite" parent="."]
visible = false
z_index = 2
texture = ExtResource( 4 )

[node name="ChestAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="body_entered" from="." to="." method="_on_Dude_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Dude_body_exited"]
